--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-M9Vn4XAfQw+lDFo9Rf1Jc1D3TYhxEwC8k0dKMAEpFxIHR6GR+OCmUlAjlHE7KdXHUPI7oO2HIGGzgF2D+UE7mA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Vite + React</title>
+    <title>Omkar Chavhan || Fullstack Developer</title>
   </head>
   <body>
     <div id="root"></div>
